faq-accordion/styles/_global.scss
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;

    @include bg-gradient;
    background-repeat: no-repeat;
    height: 100vh;
    width: 100vw;
    font-family: 'Kumbh Sans', sans-serif;
    font-size: 14px;
    font-weight: 400;
}

